<resources>
    <string name="app_name">Beat Bliss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_motive_one">Explore Your Musics \n Easy And Fast Way</string>
    <string name="owner_name_text">Beat Bliss by Md. Tasnimul Hasan</string>
    <string name="test_minute">1 Minute Test</string>
    <string name="minutes_15">15 Minutes</string>
    <string name="minutes_20">20 Minutes</string>
    <string name="minutes_25">25 Minutes</string>
    <string name="minutes_30">30 Minutes</string>
    <string name="minutes_60">60 Minutes</string>
    <string name="search_music">Search Music</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="select_songs">Select Songs</string>
    <string name="topic_feedback">Topic or Title</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="feedback_description_hint">Feedback, Suggestion, Tips, etc.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="sort_type_image_button">Sort type image button</string>
    <string name="select_theme_color">Select Theme Color:</string>
    <string name="music_sort_type">Music Sort Type:</string>
    <string name="app_version">App Version:</string>
    <string name="app_version_value">1.0.0</string>
    <string name="settings">Settings</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="play_pause_button">play pause button</string>
    <string name="copyright_text">© Copyright 2024</string>
    <string name="motive_description">Your one stop music solution</string>
</resources>