<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.splash.AppSplashActivity"
        android:background="#26FCFFE7">

        <!--<com.airbnb.lottie.LottieAnimationView
            android:id="@+id/appMainSplashAnimation"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lottie_animation_2.json"
            app:lottie_loop="true" />-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appMainSplashAnimation"
            android:layout_width="250dp"
            android:layout_height="251dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/splashMotiveTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/fjalla_one"
            android:text="@string/app_motive_one"
            android:textAlignment="center"
            android:textColor="?attr/themeColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:alpha="0.85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appMainSplashAnimation" />

        <TextView
            android:id="@+id/splashMotiveDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fjalla_one"
            android:text="@string/motive_description"
            android:textAlignment="center"
            android:textColor="?attr/themeColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:alpha="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splashMotiveTV" />

        <TextView
            android:id="@+id/copyRightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_text"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="?attr/themeColor"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/fjalla_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/splashOwnerName" />

        <TextView
            android:id="@+id/splashOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_name_text"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="?attr/themeColor"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:fontFamily="@font/fjalla_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>