<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedbackFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.FeedbackFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feedbackToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/themeColor"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/feedbackTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/fjalla_one"
                android:text="Give Your Feedback"
                android:textFontWeight="1000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backBtn"
                app:layout_constraintTop_toTopOf="@+id/backBtn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedbackTopicTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedbackToolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedbackTopicEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fjalla_one"
                android:hint="@string/topic_feedback"
                android:inputType="textEmailSubject"
                android:singleLine="true"
                android:textSize="16sp"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedbackEmailTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedbackTopicTil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedbackEmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fjalla_one"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address_optional"
                android:singleLine="false"
                android:textSize="16sp"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedbackDescriptionTil"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedbackEmailTil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedbackDescriptionEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/fjalla_one"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:hint="@string/feedback_description_hint"
                android:singleLine="true"
                android:textSize="16sp"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendFeedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/send_feedback"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:rippleColor="#40FFFFFF"
            android:backgroundTint="?attr/themeColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedbackDescriptionTil"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>